added baby image

--- a/start.html
+++ b/start.html
@@ -10,5 +10,6 @@
     <h1>This is not index.html file</h1>
     <h3>New ekjonre paichi</h3>
     <h3>New</h3>
+    <img src="baby.jpg" alt="image">
 </body>
 </html>
